--- a/이것이 취업을 위한 코딩 테스트다 with 파이썬/3. DFS(Depth First Search) & BFS(Breadth First Search).ipynb
+++ b/이것이 취업을 위한 코딩 테스트다 with 파이썬/3. DFS(Depth First Search) & BFS(Breadth First Search).ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# DFS(Depth First Search) & BFS(Breadth First Search)"
+    "# 3. DFS(Depth First Search) & BFS(Breadth First Search)"
    ]
   },
   {
@@ -336,7 +336,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
