--- a/자료구조와 함께 배우는 알고리즘 입문 - 파이썬 편/Ch03-검색 알고리즘.ipynb
+++ b/자료구조와 함께 배우는 알고리즘 입문 - 파이썬 편/Ch03-검색 알고리즘.ipynb
@@ -17,7 +17,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 선형 검색(Sequential Search)\n",
+    "### 1. 선형 검색(Sequential Search)\n",
     "- 종료 조건 : 검색할 값을 찾지 못하고 배열의 끝을 지나가거나 검색할 원소를 찾는 경우"
    ]
   },
@@ -89,26 +89,20 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "원소 수를 입력하세요.: 6\n",
+      "원소 수를 입력하세요.: 5\n",
       "x[0]:  12\n",
-      "x[1]:  34\n",
-      "x[2]:  55\n",
-      "x[3]:  11\n",
-      "x[4]:  23\n",
-      "x[5]:  3\n",
-      "검색할 값을 입력하세요.:  3\n"
+      "x[1]:  4\n",
+      "x[2]:  3\n",
+      "x[3]:  3\n",
+      "x[4]:  2\n",
+      "검색할 값을 입력하세요.:  7\n"
      ]
     },
     {
-     "ename": "NameError",
-     "evalue": "name 'seq' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-2-5d9046774993>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     24\u001b[0m \u001b[0mky\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0minput\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'검색할 값을 입력하세요.: '\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;31m# 검색할 키 ky를 입력받음\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     25\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 26\u001b[1;33m \u001b[0midx\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msentinel_search\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mky\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     27\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     28\u001b[0m \u001b[1;32mif\u001b[0m \u001b[0midx\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-2-5d9046774993>\u001b[0m in \u001b[0;36msentinel_search\u001b[1;34m(a, key)\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;31m# 선형 검색 함수(보초법)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0msentinel_search\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ma\u001b[0m \u001b[1;33m:\u001b[0m \u001b[0mSequence\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mkey\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0many\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m->\u001b[0m \u001b[0mint\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m     \u001b[0ma\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcopy\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdeepcopy\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mseq\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;31m# seq를 복사\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      7\u001b[0m     \u001b[0ma\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;31m# 보초 key를 추가\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'seq' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "검색값을 갖는 원소가 존재하지 않습니다.\n"
      ]
     }
    ],
@@ -117,7 +111,7 @@
     "import copy\n",
     "\n",
     "# 선형 검색 함수(보초법)\n",
-    "def sentinel_search(a : Sequence, key: any) -> int:\n",
+    "def sentinel_search(seq : Sequence, key: any) -> int:\n",
     "    a = copy.deepcopy(seq) # seq를 복사\n",
     "    a.append(key) # 보초 key를 추가\n",
     "    \n",
@@ -150,7 +144,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 이진 검색(Binary Search)\n",
+    "### 2. 이진 검색(Binary Search)\n",
     "- 오름차순이나 내림차순으로 정렬된 배열에서 좀 더 효율적인 검색 가능\n",
     "- 종료 조건\n",
     "    - a의 중앙 원소 값이 key와 일치하는 경우\n",
@@ -256,6 +250,33 @@
     "\n",
     "![image.png](attachment:03c7b798-0589-458b-96a5-dc71ecee4fed.png)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3. 해시법(Hashing)\n",
+    "- 검색, 데이터의 추가, 삭제까지 효율적으로 수행할 수 있는 검색 알고리즘\n",
+    "- 해시 함수(Hash Function) : 키를 해시값으로 저장하는 과정\n",
+    "- 버킷(Bucket) : 해시 테이블에서 만들어지는 원소\n",
+    "- 충돌(Collision) : 저장할 버킷이 중복되는 현상"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### ※ 해시법에서 충돌이 발생하는 경우\n",
+    "-  체인법(Chaining) or 오픈 해시법(Open Hashing) : 해시값이 같은 원소를 연결 리스트로 관리\n",
+    "- 오픈 주소법 : 빈 버킷을 찾을 때까지 해시를 반복"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -274,7 +295,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
