Ch03-검색 알고리즘-해시

--- a/자료구조와 함께 배우는 알고리즘 입문 - 파이썬 편/Ch03-검색 알고리즘.ipynb
+++ b/자료구조와 함께 배우는 알고리즘 입문 - 파이썬 편/Ch03-검색 알고리즘.ipynb
@@ -258,6 +258,8 @@
     "### 3. 해시법(Hashing)\n",
     "- 검색, 데이터의 추가, 삭제까지 효율적으로 수행할 수 있는 검색 알고리즘\n",
     "- 해시 함수(Hash Function) : 키를 해시값으로 저장하는 과정\n",
+    "    - key가 int형인 경우 : key를 해시의 크기 capacity로 나눈 나머지를 해시값으로 설정\n",
+    "    - key가 int형이 아닌 경우 : sha256, encode() 함수 등의 해시 알고리즘 사용\n",
     "- 버킷(Bucket) : 해시 테이블에서 만들어지는 원소\n",
     "- 충돌(Collision) : 저장할 버킷이 중복되는 현상"
    ]
