--- a/Programmers/Hash.ipynb
+++ b/Programmers/Hash.ipynb
@@ -136,13 +136,24 @@
    "outputs": [],
    "source": [
     "def solution(clothes):\n",
-    "    answer = 0\n",
-    "    return answer"
+    "    answer = 1\n",
+    "    clothes_list = {}\n",
+    "    \n",
+    "    for cloth in clothes:\n",
+    "        if cloth[1] in clothes_list:\n",
+    "            clothes_list[cloth[1]] += 1\n",
+    "        else :\n",
+    "            clothes_list[cloth[1]] = 1\n",
+    "    \n",
+    "    for count in clothes_list :\n",
+    "        answer *= (clothes_list[count] + 1)\n",
+    "        \n",
+    "    return answer - 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,22 +163,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0"
+       "5"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "solution(clothes)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4. 베스트앨범"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "genres = [\"classic\", \"pop\", \"classic\", \"classic\", \"pop\"]\n",
+    "plays = [500, 600, 150, 800, 2500]\n",
+    "# return [4, 1, 3, 0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "solution() takes 1 positional argument but 2 were given",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-5-223dfff58c05>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0msolution\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mgenres\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mplays\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m: solution() takes 1 positional argument but 2 were given"
+     ]
+    }
+   ],
+   "source": [
+    "solution(genres, plays)"
    ]
   }
  ],
@@ -187,7 +244,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
