--- a/Programmers/Hash.ipynb
+++ b/Programmers/Hash.ipynb
@@ -190,14 +190,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def solution(genres, plays):\n",
+    "    answer = []\n",
+    "    genres_list = {}\n",
+    "    song_list = []\n",
+    "            \n",
+    "    for i in range(len(genres)) :\n",
+    "        song = (i, genres[i], plays[i])\n",
+    "        song_list.append(song)\n",
+    "    \n",
+    "    song_list.sort(key=lambda song: song[2], reverse=True)\n",
+    "\n",
+    "    for song in song_list:\n",
+    "        if song[1] in genres_list:\n",
+    "            genres_list[song[1]] += int(song[2])\n",
+    "        else :\n",
+    "            genres_list[song[1]] = int(song[2])\n",
+    "    \n",
+    "    genres_list = sorted(genres_list.items(), key=lambda genres: genres[1], reverse=True)\n",
+    "    \n",
+    "    for genres in genres_list:\n",
+    "        count = 0\n",
+    "        for song in song_list:\n",
+    "            if genres[0] == song[1]:\n",
+    "                answer.append(song[0])\n",
+    "                count += 1\n",
+    "            if count > 1:\n",
+    "                break\n",
+    "    return answer"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,19 +237,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "solution() takes 1 positional argument but 2 were given",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-5-223dfff58c05>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0msolution\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mgenres\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mplays\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m: solution() takes 1 positional argument but 2 were given"
-     ]
+     "data": {
+      "text/plain": [
+       "[4, 1, 3, 0]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
